@@ -17,6 +17,9 @@ Lead Developer:
 
 People/companies who were/are contributing code to cocos2d for iPhone (alphabetically ordered):
 
+* Goffredo Marocchi (https://github.com/panajev):
+	LabelBMFont: removed forward declarations for tFontDefHashElement and tKerningHashElement. They are in the header now.
+
 * Lam Pham (http://www.fancyratstudios.com/)
 	New RotationalSkew action that matches flash functionality
 	Added Tests for RotationSkew feature
